--- a/wp-content/plugins/elementor/assets/css/editor.css
+++ b/wp-content/plugins/elementor/assets/css/editor.css
@@ -1835,13 +1835,13 @@ a.elementor-responsive-switcher {
   margin-bottom: 5px; }
 
 .elementor-group-control-blur .elementor-slider {
-  background: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/images/blur.png");
+  background: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/images/blur.png");
   -webkit-background-size: cover;
           background-size: cover;
   background-position: center; }
 
 .elementor-group-control-contrast .elementor-slider {
-  background: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/images/contrast.png");
+  background: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/images/contrast.png");
   -webkit-background-size: 100% 100%;
           background-size: 100% 100%; }
 
