--- a/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
+++ b/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'eicons';
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5.9.1");
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5.9.1#iefix") format("embedded-opentype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5.9.1") format("woff2"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5.9.1") format("woff"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5.9.1") format("truetype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5.9.1#eicon") format("svg");
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5.9.1");
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5.9.1#iefix") format("embedded-opentype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5.9.1") format("woff2"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5.9.1") format("woff"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5.9.1") format("truetype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5.9.1#eicon") format("svg");
   font-weight: normal;
   font-style: normal; }
 
