--- a/wp-content/plugins/elementor/assets/lib/font-awesome/css/all.css
+++ b/wp-content/plugins/elementor/assets/lib/font-awesome/css/all.css
@@ -4420,8 +4420,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: normal;
   font-display: auto;
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot");
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot#iefix") format("embedded-opentype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff2") format("woff2"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff") format("woff"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.ttf") format("truetype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot");
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot#iefix") format("embedded-opentype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff2") format("woff2"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff") format("woff"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.ttf") format("truetype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
 
 .fab {
   font-family: 'Font Awesome 5 Brands'; }
@@ -4430,8 +4430,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 400;
   font-display: auto;
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot");
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot#iefix") format("embedded-opentype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff2") format("woff2"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff") format("woff"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.ttf") format("truetype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot");
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot#iefix") format("embedded-opentype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff2") format("woff2"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff") format("woff"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.ttf") format("truetype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
 
 .far {
   font-family: 'Font Awesome 5 Free';
@@ -4441,8 +4441,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 900;
   font-display: auto;
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot");
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot#iefix") format("embedded-opentype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff") format("woff"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot");
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot#iefix") format("embedded-opentype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff") format("woff"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
 
 .fa,
 .fas {
