--- a/wp-content/plugins/elementor/assets/lib/font-awesome/css/brands.css
+++ b/wp-content/plugins/elementor/assets/lib/font-awesome/css/brands.css
@@ -7,8 +7,8 @@
   font-style: normal;
   font-weight: normal;
   font-display: auto;
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot");
-  src: url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot#iefix") format("embedded-opentype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff2") format("woff2"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff") format("woff"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.ttf") format("truetype"), url("/https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot");
+  src: url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot#iefix") format("embedded-opentype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff2") format("woff2"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff") format("woff"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.ttf") format("truetype"), url("https://whosthemaan.github.io/word-test/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
 
 .fab {
   font-family: 'Font Awesome 5 Brands'; }
