--- a/wp-content/themes/ayafreelance/style.css
+++ b/wp-content/themes/ayafreelance/style.css
@@ -3512,7 +3512,7 @@ p.info {
 	height: 168px;
 	position: relative;
 	margin-top: -110px;
-	background: transparent url(/https://whosthemaan.github.io/word-test/wp-content/themes/ayafreelance/images/slider/shadow.png) no-repeat bottom center;
+	background: transparent url(https://whosthemaan.github.io/word-test/wp-content/themes/ayafreelance/images/slider/shadow.png) no-repeat bottom center;
 	background-size: 100% 100%; /* stretches it */
 	z-index: -1;
 	display: none;
@@ -3535,7 +3535,7 @@ p.info {
 .nav-arrows a {
 	width: 42px;
 	height: 42px;
-	background: #ffc801 url(/https://whosthemaan.github.io/word-test/wp-content/themes/ayafreelance/images/slider/nav.png) no-repeat top left;
+	background: #ffc801 url(https://whosthemaan.github.io/word-test/wp-content/themes/ayafreelance/images/slider/nav.png) no-repeat top left;
 	position: absolute;
 	top: 50%;
 	left: 2px;
@@ -3600,7 +3600,7 @@ p.info {
 .nav-options span {
 	width: 30px;
 	height: 30px;
-	background: #cbbfae url(/https://whosthemaan.github.io/word-test/wp-content/themes/ayafreelance/images/slider/options.png) no-repeat top left;
+	background: #cbbfae url(https://whosthemaan.github.io/word-test/wp-content/themes/ayafreelance/images/slider/options.png) no-repeat top left;
 	text-indent: -9000px;
 	cursor: pointer;
 	opacity: 0.7;
