--- a/wp-content/themes/fdesign/style.css
+++ b/wp-content/themes/fdesign/style.css
@@ -1757,7 +1757,7 @@ blockquote, figure {
 }
 
 #page-header {
-	background-image:url('/https://whosthemaan.github.io/word-test/wp-content/themes/fdesign/images/pageheader.png');
+	background-image:url('https://whosthemaan.github.io/word-test/wp-content/themes/fdesign/images/pageheader.png');
 	background-repeat: repeat;
 	-webkit-box-shadow: inset 0 -1px 1px -1px rgba(0, 0, 0, 0.25);
 	-moz-box-shadow: inset 0 -1px 1px -1px rgba(0, 0, 0, 0.25);
