--- a/wp-content/themes/profile-lite/css/font-awesome.css
+++ b/wp-content/themes/profile-lite/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('/https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.eot?v=4.4.0');
-  src: url('/https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.eot#iefix&v=4.4.0') format('embedded-opentype'), url('/https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.woff2?v=4.4.0') format('woff2'), url('/https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.woff?v=4.4.0') format('woff'), url('/https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.ttf?v=4.4.0') format('truetype'), url('/https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular') format('svg');
+  src: url('https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.eot?v=4.4.0');
+  src: url('https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.eot#iefix&v=4.4.0') format('embedded-opentype'), url('https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.woff2?v=4.4.0') format('woff2'), url('https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.woff?v=4.4.0') format('woff'), url('https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.ttf?v=4.4.0') format('truetype'), url('https://whosthemaan.github.io/word-test/wp-content/themes/profile-lite/fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
